# Halloween-themed-Sudoku

./: CMakeLists.txt  README.md  SudokuApp.cpp  SudokuApp.h  main.cpp  pch.h
SudokuLib/: Background.cpp  Background.h  BackgroundDeclaration.cpp  BackgroundDeclaration.h  CMakeLists.txt  CompletionChecker.cpp  CompletionChecker.h  Container.cpp  Container.h  ContainerVisitor.cpp  ContainerVisitor.h  Declaration.cpp  Declaration.h  DeclarationVisitor.cpp  DeclarationVisitor.h  Digit.cpp  Digit.h  DigitDeclaration.cpp  DigitDeclaration.h  DigitVisitor.cpp  DigitVisitor.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GetBackgroundVisitor.cpp  GetBackgroundVisitor.h  GetDigitFromItem.cpp  GetDigitFromItem.h  GetEatingDigitVisitor.cpp  GetEatingDigitVisitor.h  GetGridItemVisitor.cpp  GetGridItemVisitor.h  GetSpartyVisitor.cpp  GetSpartyVisitor.h  GetXrayVisitor.cpp  GetXrayVisitor.h  IntroPage.cpp  IntroPage.h  Item.cpp  (+29 more)
Tests/: CMakeLists.txt  DigitTest.cpp  GetSpartyVisitorTest.cpp  HitTestTest.cpp  ItemTest.cpp  LevelTest.cpp  ScoreBoardTest.cpp  SudokuGameTest.cpp  XrayTest.cpp
levels/: level3.xml
